force-app/main/default/objects/Load_Account__b/Load_Account__b.object-meta.xml
<CustomObject>
    <label>Load Account</label>
    <pluralLabel>Loan Accounts</pluralLabel>
</CustomObject>