force-app/main/default/objects/Load_Account__b/fields/Balance_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Loan_Amount__c</fullName>
    <label>Balance Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>