force-app/main/default/objects/Load_Account__b/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Accounts</relationshipLabel>
    <relationshipName>Loan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>