force-app/main/default/objects/Load_Account__b/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>