force-app/main/default/objects/Load_Account__b/fields/Security_Contact__c.field-meta.xml
<CustomField>
    <fullName>Security_Contact__c</fullName>
    <label>Security Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Accounts1</relationshipLabel>
    <relationshipName>Loan_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>