force-app/main/default/objects/Load_Account__b/fields/Security_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Security_Contact_Name__c</fullName>
    <label>Security Contact Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>