force-app/main/default/objects/Load_Account__b/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>